[package]
name = "other"
version = "0.1.0"
authors = ["simon-fu <simonok@139.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.8.1", features = ["full"] }
tokio-stream = { version = "^0.1.7", features = ["sync"] }
futures="^0.3.15"
bytes = "^1.0.1"
tracing = { version = "^0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "^0.2.19"
clap = "3.0.0-beta.2"
sysinfo = "0.19.2"
