[package]
name = "other"
version = "0.1.0"
authors = ["simon-fu <simonok@139.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.8.1", features = ["full"] }
tokio-stream = { version = "^0.1.7", features = ["sync"] }
futures="^0.3.15"
bytes = "^1.0.1"
tracing = { version = "^0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "^0.2.19"
clap = "=3.0.0-beta.2"
sysinfo = "0.19.2"
chrono = "0.4.19"
anyhow = "1.0.43"
csv = "1.1.6"
async-trait = "0.1.50"
async-raft = "0.6.1"
serde = "^1.0.126"
serde_derive = "^1.0.126"
serde_json = "^1.0.65"
thiserror = "^1.0.26"
lazy_static = "^1.4.0"

raft = {version = "0.6.0", default-features=false, features=["prost-codec", "default-logger"]}
# raft = "0.6.0"
slog = "2.2"
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.4.0", optional = true }
prost = "0.8.0"
protobuf = "2"

mongodb = "2.0.0"
